objects/Dependent_Picklist__mdt.object
<CustomObject>
    <fields>
        <fullName>Controlling_field_API_Name__c</fullName>
        <label>Controlling field API Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlling_field_value__c</fullName>
        <label>Controlling field value</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Field_Value__c</fullName>
        <label>Dependent Field Value</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name_for_Dependent_Picklist__c</fullName>
        <label>Object Name for Dependent Picklist</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dependent_field_API_Name__c</fullName>
        <label>dependent field API Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Dependent Picklist</label>
    <pluralLabel>Dependent Picklists</pluralLabel>
</CustomObject>